@@ -187,3 +187,4 @@ Fixes:
     * fix custom states for edje SPACER parts    
     * fix edje program filters
     * fix dangling pointer problem related with shmget fail
+    * fix bug scroll works when PgDn, PgUp, Home, End key in entry is pressed in preedit state
