@@ -1,3 +1,8 @@
+2013-03-06  Jihoon Kim (jihoon)
+
+        * Edje entry: fix bug scroll works when PgDn, PgUp, Home, End key in entry is pressed in preedit state
+
+
 2013-03-05  Jiyoun Park (Jypark)
 
         * Ecore_x: Add atom related with indicator type.
